fix: hover is not readable at processing and payment status

--- a/bin/backend/payment-status.css
+++ b/bin/backend/payment-status.css
@@ -51,3 +51,9 @@
     border-color: #004e5a;
     color: #004e5a;
 }
+
+.td.clickable:hover .processing-status,
+.td.clickable:hover .payment-status {
+    border-color: #fff !important;
+    color: #fff !important;
+}
